--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,37 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Moyo header</title>
     <link rel="stylesheet" href="./style.css">
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+      
+
   </head>
   <body>
-    <h1>Moyo header</h1>
+    <header>
+      <nav>
+        <div class="container">
+
+          <a href="" class="img">
+            <img class="img_linc" src="./images/logo.png" alt="">
+          </a>
+
+          <div class="nav">
+
+            <a href="" class="nav_linc nav_linc-1">Apple</a>
+            <a href="" class="nav_linc nav_linc-2">Samsung</a>
+            <a href="" class="nav_linc nav_linc-3">Смарфоны и телефоны  </a>
+            <a href="" class="nav_linc nav_linc-4">Ноутбуки и компьютеры</a>
+            <a href="" class="nav_linc nav_linc-5">Гаджеты</a>
+            <a href="" class="nav_linc nav_linc-6">Планшеты</a>
+            <a href="" class="nav_linc nav_linc-7">ФОТО</a>
+            <a href="" class="nav_linc nav_linc-8">ВИДЕО</a>
+
+          </div>
+
+        </div>
+      </nav>
+    </header>
   </body>
 </html>
